[gd_scene load_steps=12 format=3 uid="uid://b6tltaqjk4jbr"]

[ext_resource type="Script" uid="uid://cj70nkndwllet" path="res://Scripts/enemigo_3.gd" id="1_a2os1"]
[ext_resource type="Texture2D" uid="uid://22e77gcael8r" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/1.png" id="2_a2os1"]
[ext_resource type="PackedScene" uid="uid://lm8ymjplqym4" path="res://Scenes/proyectil.tscn" id="2_ydhoe"]
[ext_resource type="Texture2D" uid="uid://cdg8tb0b1m8jj" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/2.png" id="3_ydhoe"]
[ext_resource type="Texture2D" uid="uid://b148ymi2cxg1q" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/3.png" id="4_48ttw"]
[ext_resource type="Texture2D" uid="uid://6v75utdhmpjw" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/4.png" id="5_uwjny"]
[ext_resource type="Texture2D" uid="uid://ujysmmhrfe4h" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/5.png" id="6_t6p7y"]
[ext_resource type="Texture2D" uid="uid://cvbc65jl4pouh" path="res://Sprites/Treasure Hunters/Shooter Traps/Sprites/Seashell/Seashell Fire/6.png" id="7_0hso1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkovy"]
size = Vector2(26, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_noceh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a2os1")
}, {
"duration": 1.0,
"texture": ExtResource("3_ydhoe")
}, {
"duration": 1.0,
"texture": ExtResource("4_48ttw")
}, {
"duration": 1.0,
"texture": ExtResource("5_uwjny")
}, {
"duration": 1.0,
"texture": ExtResource("6_t6p7y")
}, {
"duration": 1.0,
"texture": ExtResource("7_0hso1")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dphad"]
size = Vector2(34, 25)

[node name="Enemigo 3" type="CharacterBody2D"]
rotation = 1.5707964
collision_layer = 4
collision_mask = 3
script = ExtResource("1_a2os1")
projectile_scene = ExtResource("2_ydhoe")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("RectangleShape2D_bkovy")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_noceh")
animation = &"shoot"
frame_progress = 0.2383049

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_dphad")
debug_color = Color(0.9367286, 1.3861656e-05, 0.63308996, 0.41960785)

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(-13, 10.000001)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
